// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMarginInline renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: 0;
  -moz-scroll-margin-inline: 0;
  -ms-scroll-margin-inline: 0;
  scroll-margin-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: 0;
  -moz-scroll-margin-inline: 0;
  -ms-scroll-margin-inline: 0;
  scroll-margin-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: 0;
  -moz-scroll-margin-inline: 0;
  -ms-scroll-margin-inline: 0;
  scroll-margin-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: 0;
  -moz-scroll-margin-inline: 0;
  -ms-scroll-margin-inline: 0;
  scroll-margin-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: hasnot;
  -moz-scroll-margin-inline: hasnot;
  -ms-scroll-margin-inline: hasnot;
  scroll-margin-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: has;
  -moz-scroll-margin-inline: has;
  -ms-scroll-margin-inline: has;
  scroll-margin-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: hasnot;
  -moz-scroll-margin-inline: hasnot;
  -ms-scroll-margin-inline: hasnot;
  scroll-margin-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: has;
  -moz-scroll-margin-inline: has;
  -ms-scroll-margin-inline: has;
  scroll-margin-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: invalid.path.1;
  -moz-scroll-margin-inline: invalid.path.1;
  -ms-scroll-margin-inline: invalid.path.1;
  scroll-margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: invalid.path.1;
  -moz-scroll-margin-inline: invalid.path.1;
  -ms-scroll-margin-inline: invalid.path.1;
  scroll-margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: invalid.path.1;
  -moz-scroll-margin-inline: invalid.path.1;
  -ms-scroll-margin-inline: invalid.path.1;
  scroll-margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: invalid.path.1;
  -moz-scroll-margin-inline: invalid.path.1;
  -ms-scroll-margin-inline: invalid.path.1;
  scroll-margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: -54881px;
  -moz-scroll-margin-inline: -54881px;
  -ms-scroll-margin-inline: -54881px;
  scroll-margin-inline: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: -54881px;
  -moz-scroll-margin-inline: -54881px;
  -ms-scroll-margin-inline: -54881px;
  scroll-margin-inline: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: -42365px;
  -moz-scroll-margin-inline: -42365px;
  -ms-scroll-margin-inline: -42365px;
  scroll-margin-inline: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: -42365px;
  -moz-scroll-margin-inline: -42365px;
  -ms-scroll-margin-inline: -42365px;
  scroll-margin-inline: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: July;
  -moz-scroll-margin-inline: July;
  -ms-scroll-margin-inline: July;
  scroll-margin-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: July;
  -moz-scroll-margin-inline: July;
  -ms-scroll-margin-inline: July;
  scroll-margin-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: January;
  -moz-scroll-margin-inline: January;
  -ms-scroll-margin-inline: January;
  scroll-margin-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: December;
    -moz-scroll-margin-inline: December;
    -ms-scroll-margin-inline: December;
    scroll-margin-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: June;
    -moz-scroll-margin-inline: June;
    -ms-scroll-margin-inline: June;
    scroll-margin-inline: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: January;
  -moz-scroll-margin-inline: January;
  -ms-scroll-margin-inline: January;
  scroll-margin-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: December;
    -moz-scroll-margin-inline: December;
    -ms-scroll-margin-inline: December;
    scroll-margin-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: June;
    -moz-scroll-margin-inline: June;
    -ms-scroll-margin-inline: June;
    scroll-margin-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: July;
    -moz-scroll-margin-inline: July;
    -ms-scroll-margin-inline: July;
    scroll-margin-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: July;
    -moz-scroll-margin-inline: July;
    -ms-scroll-margin-inline: July;
    scroll-margin-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: June;
    -moz-scroll-margin-inline: June;
    -ms-scroll-margin-inline: June;
    scroll-margin-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: June;
    -moz-scroll-margin-inline: June;
    -ms-scroll-margin-inline: June;
    scroll-margin-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: July;
  -moz-scroll-margin-inline: July;
  -ms-scroll-margin-inline: July;
  scroll-margin-inline: July;
}

@media May {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: July;
  -moz-scroll-margin-inline: July;
  -ms-scroll-margin-inline: July;
  scroll-margin-inline: July;
}

@media May {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: April;
  -moz-scroll-margin-inline: April;
  -ms-scroll-margin-inline: April;
  scroll-margin-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: January;
    -moz-scroll-margin-inline: January;
    -ms-scroll-margin-inline: January;
    scroll-margin-inline: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: December;
    -moz-scroll-margin-inline: December;
    -ms-scroll-margin-inline: December;
    scroll-margin-inline: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: April;
  -moz-scroll-margin-inline: April;
  -ms-scroll-margin-inline: April;
  scroll-margin-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: January;
    -moz-scroll-margin-inline: January;
    -ms-scroll-margin-inline: January;
    scroll-margin-inline: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: December;
    -moz-scroll-margin-inline: December;
    -ms-scroll-margin-inline: December;
    scroll-margin-inline: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-margin-inline: July;
    -moz-scroll-margin-inline: July;
    -ms-scroll-margin-inline: July;
    scroll-margin-inline: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-margin-inline: July;
    -moz-scroll-margin-inline: July;
    -ms-scroll-margin-inline: July;
    scroll-margin-inline: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: September;
    -moz-scroll-margin-inline: September;
    -ms-scroll-margin-inline: September;
    scroll-margin-inline: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: November;
    -moz-scroll-margin-inline: November;
    -ms-scroll-margin-inline: November;
    scroll-margin-inline: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: August;
    -moz-scroll-margin-inline: August;
    -ms-scroll-margin-inline: August;
    scroll-margin-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-inline: January;
    -moz-scroll-margin-inline: January;
    -ms-scroll-margin-inline: January;
    scroll-margin-inline: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: December;
    -moz-scroll-margin-inline: December;
    -ms-scroll-margin-inline: December;
    scroll-margin-inline: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: June;
    -moz-scroll-margin-inline: June;
    -ms-scroll-margin-inline: June;
    scroll-margin-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-inline: January;
    -moz-scroll-margin-inline: January;
    -ms-scroll-margin-inline: January;
    scroll-margin-inline: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: December;
    -moz-scroll-margin-inline: December;
    -ms-scroll-margin-inline: December;
    scroll-margin-inline: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline: April;
    -moz-scroll-margin-inline: April;
    -ms-scroll-margin-inline: April;
    scroll-margin-inline: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline: May;
    -moz-scroll-margin-inline: May;
    -ms-scroll-margin-inline: May;
    scroll-margin-inline: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline: June;
    -moz-scroll-margin-inline: June;
    -ms-scroll-margin-inline: June;
    scroll-margin-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: 54881px;
  -moz-scroll-margin-inline: 54881px;
  -ms-scroll-margin-inline: 54881px;
  scroll-margin-inline: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: 54881px;
  -moz-scroll-margin-inline: 54881px;
  -ms-scroll-margin-inline: 54881px;
  scroll-margin-inline: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: 42365px;
  -moz-scroll-margin-inline: 42365px;
  -ms-scroll-margin-inline: 42365px;
  scroll-margin-inline: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: 42365px;
  -moz-scroll-margin-inline: 42365px;
  -ms-scroll-margin-inline: 42365px;
  scroll-margin-inline: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: July;
  -moz-scroll-margin-inline: July;
  -ms-scroll-margin-inline: July;
  scroll-margin-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: July;
  -moz-scroll-margin-inline: July;
  -ms-scroll-margin-inline: July;
  scroll-margin-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: June;
  -moz-scroll-margin-inline: June;
  -ms-scroll-margin-inline: June;
  scroll-margin-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: June;
  -moz-scroll-margin-inline: June;
  -ms-scroll-margin-inline: June;
  scroll-margin-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInline renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollMarginInline renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline: DarkSlateBlue;
  -moz-scroll-margin-inline: DarkSlateBlue;
  -ms-scroll-margin-inline: DarkSlateBlue;
  scroll-margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: DarkSlateBlue;
  -moz-scroll-margin-inline: DarkSlateBlue;
  -ms-scroll-margin-inline: DarkSlateBlue;
  scroll-margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: DarkSlateBlue;
  -moz-scroll-margin-inline: DarkSlateBlue;
  -ms-scroll-margin-inline: DarkSlateBlue;
  scroll-margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline: DarkSlateBlue;
  -moz-scroll-margin-inline: DarkSlateBlue;
  -ms-scroll-margin-inline: DarkSlateBlue;
  scroll-margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
